<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for turtle_catch_them_all project</description>

  <maintainer email="v.chintagunta@stud.th-deg.de">harsha</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- launch system dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- runtime dependencies: simulator + your node package -->
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>turtlesim_catch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
